testing/tests/ui/blocks_below_top_level.stderr
error: the previous template error derives from
 --> tests/ui/blocks_below_top_level.rs:4:21
  |
4 |   #[template(source = r#"
  |  _____________________^
5 | | {% block bla %}
6 | | {% extends "bla.txt" %}
7 | | {% endblock %}
8 | | "#, ext = "txt")]
  | |__^

error: the previous template error derives from
  --> tests/ui/blocks_below_top_level.rs:12:21
   |
12 |   #[template(source = r#"
   |  _____________________^
13 | | {% block bla %}
14 | | {% macro bla() %}
15 | | {% endmacro %}
16 | | {% endblock %}
17 | | "#, ext = "txt")]
   | |__^

error: the previous template error derives from
  --> tests/ui/blocks_below_top_level.rs:21:21
   |
21 |   #[template(source = r#"
   |  _____________________^
22 | | {% block bla %}
23 | | {% import "bla.txt" as blue %}
24 | | {% endblock %}
25 | | "#, ext = "txt")]
   | |__^
